improved navigation back to homepage from posts

--- a/_layouts/ibuycrap.html
+++ b/_layouts/ibuycrap.html
@@ -11,7 +11,7 @@
         <div class="page">
             <div id="header">
                 <div id="title">
-                    <a href="https://lam.blogliam.com/ibuycrap/">
+                    <a href="/ibuycrap/">
                         <img src="/assets/img/crap.png">
                     </a>
                 </div>
