--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@
         <div class="page">
             <div id="header">
                 <div id="title">
-                    <a href="{{ site.baseurl }}">
+                    <a href="/">
                         <img src="/assets/img/lamlog.png">
                     </a>
                 </div>
