lamlogpost my balls

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <title>{{ site.title }} - {{ page.title }}</title>
         <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+        {% include tools/header.html %}
     </head>
     <body>
         <div class="page">
