--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@
             <div id="header">
                 <div id="title">
                     <a href="/">
-                        <img src="/assets/img/lamlog.png">
+                        <img src="/assets/img/lamlog_small.png">
                     </a>
                 </div>
 
