--- a/_layouts/ibuycrap.html
+++ b/_layouts/ibuycrap.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{{ "/assets/css/crap.css" | relative_url }}">
 
         <style>
-            img {
+            .content img {
                 width: 70%;
             }
 
