--- a/_layouts/lamlog.html
+++ b/_layouts/lamlog.html
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
         {% include tools/header.html %}
     </head>
+    <a href="https://blogliam.com"> ⬅️back to blogliam</a>
     <body>
         <div class="page">
+            <a href="https://blogliam.com"> ⬅️back to blogliam</a>
             <div id="header">
                 <div id="title">
                     <a href="/">
