added link back to blogliam from blogs

--- a/_layouts/ibuycrap.html
+++ b/_layouts/ibuycrap.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    
+    <a href="https://blogliam.com"> ⬅️back to blogliam</a>
     <body>
         <div class="page">
             <div id="header">
