updated back button on coming soon page

--- a/_layouts/boardwalk.html
+++ b/_layouts/boardwalk.html
@@ -17,13 +17,14 @@
             }
         </style>
     </head>
-    <a href="https://blogliam.com"> ⬅️back to blogliam</a>
+    <a href="/"> ⬅️back to LAMLOG</a>
     <body>
         <div class="center">
             <div id="header">
                 <div id="title">
-                    [coming soon]  
-
+                    [coming soon] 
                 </div>
+            </div>
+        </div>
     </body>
 </html>
